Fix vertical alignment of forms

--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -1,7 +1,6 @@
 .login {
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
 
     height: 100%;
